2008-09-02  Sven Herzberg  <sven@imendio.com>

	Drop trailing whitespaces
	based on a patch by Christian Dywan

	* src/sapwood-pixmap.c,
	* src/sapwood-rc-style.c,
	* src/sapwood-rc-style.h,
	* src/sapwood-server.c,
	* src/sapwood-style.c,
	* src/sapwood-style.h,
	* src/theme-pixbuf.c,
	* src/theme-pixbuf.h: drop trailing whitespaces

2008-09-02  Sven Herzberg  <sven@imendio.com>

	Let the filename match the name of the implemented class
	based on a patch by Christian Dywan

	* src/Makefile.am: updated file names
	* src/sapwood-render.c: removed
	* src/theme-pixbuf.c (new): moved to this name

2008-09-02  Sven Herzberg  <sven@imendio.com>

	Let the filename match the name of the implemented class
	based on a patch by Christian Dywan

	* src/Makefile.am: updated file names
	* src/sapwood-draw.c: removed
	* src/sapwood-style.c (new): moved to this name

2008-09-01  Sven Herzberg  <sven@imendio.com>

	NB#87905: Sapwood has a small memory leak
	Proposed solution by Yrjola Mika

	* src/sapwood-server.c (cleanup_pixmap_destroy): don't forget to free
	the CacheNode itself

2008-06-18  Sven Herzberg  <herzi@imendio.com>

	Debug pixmap size mismatches

	* src/sapwood-draw.c (draw_simple_image), (draw_gap_image),
	(draw_hline), (draw_vline): added a widget pointer
	* src/sapwood-main.c (theme_init): added SAPWOOD_DEBUG=scaling support
	* src/sapwood-pixmap.c (sapwood_pixmap_render_rects): debug pixmap
	scaling
	* src/sapwood-pixmap.h: added a variable to indicate whether we debug
	the sacling
	* src/sapwood-render.c (theme_pixbuf_render): added a widget pointer
	* src/theme-pixbuf.h: added a widget pointer

2007-09-25  Tommi Komulainen  <tommi.komulainen@nokia.com>

	* === Release 3.0.0 ===

2007-09-21  Michael Natterer  <mitch@imendio.com>

	* src/sapwood-rc-style.c (sapwood_rc_style_parse): Speed up parsing a
	little by replacing g_list_append with prepend
	(sapwood_rc_style_merge): avoid a memset done by g_list_alloc() by
	using g_list_append() instead (NB#69921)
