@@ -73,7 +73,7 @@ theme_pixbuf_ref (ThemePixbuf *theme_pb)
 {
   theme_pb->refcnt++;
   LOG ("[%p] ref: refcnt = %d", theme_pb, theme_pb->refcnt);
-  g_assert(theme_pb->refcnt != 0);
+  g_assert (theme_pb->refcnt != 0);
   return theme_pb;
 }
 
@@ -366,13 +366,13 @@ theme_pixbuf_render (ThemePixbuf  *theme_pb,
 	       */
 	      if (clip_rect->width < mask_width)
 		{
-		  LOG("width: %d -> %d, x: %d - %d", mask_width, clip_rect->width, x, clip_rect->x);
+		  LOG ("width: %d -> %d, x: %d - %d", mask_width, clip_rect->width, x, clip_rect->x);
 		  mask_x = x - clip_rect->x;
 		  mask_width = clip_rect->width;
 		}
 	      if (clip_rect->height < height)
 		{
-		  LOG("height: %d -> %d, y: %d - %d", mask_height, clip_rect->height, y, clip_rect->y);
+		  LOG ("height: %d -> %d, y: %d - %d", mask_height, clip_rect->height, y, clip_rect->y);
 		  mask_y = y - clip_rect->y;
 		  mask_height = clip_rect->height;
 		}
